tests/parser/errors/playerdec_field_twice.gbl
player p { dollars: 1$, dollars: 2$ }
